# libmemfile

./: CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  simple-file.c
lib/: CMakeLists.txt  libmemfile.pc.in  memory_file.c
lib/include/: memory_file.h
